# v0.1.0

.github/workflows/: 1main.yml  main.yml
.github/workflows/A380_AI_Crew_GateToGate/: A380X_API.md  RUN_COLD_DARK_K.cmd  RUN_G2G_K.cmd  pyproject.toml
.github/workflows/A380_AI_Crew_GateToGate/configs/: cold_dark_only.yaml  gate_to_gate_full_skeleton.yaml
.github/workflows/A380_AI_Crew_GateToGate/installer_setup/: A380_AI_Crew.iss
.github/workflows/A380_AI_Crew_GateToGate/src/a380_ai_crew/: cli.py  control_center.py
.github/workflows/A380_AI_Crew_GateToGate/src/a380_ai_crew/core/: engine.py  plan.py
.github/workflows/A380_AI_Crew_GateToGate/src/a380_ai_crew/sim/: simlayer.py
.github/workflows/A380_AI_Crew_GateToGate/src/a380_ai_crew/tools/: diagnose.py
A380_AI_Crew_GateToGate/: BUILD_SETUP.md  INSTALL_G2G_K.cmd  README.md  RUN_G2G_K.cmd  START_ControlCenter.cmd  START_G2G_K.cmd  pyproject.toml
A380_AI_Crew_GateToGate/configs/: action_map.yaml  gate_to_gate.yaml
A380_AI_Crew_GateToGate/installer_setup/: A380_AI_Crew.iss  README_SETUP.md
A380_AI_Crew_GateToGate/src/a380_ai_crew/: cli.py  control_center.py
A380_AI_Crew_GateToGate/src/a380_ai_crew/core/: engine.py  logger.py  plan.py
A380_AI_Crew_GateToGate/src/a380_ai_crew/procedures/: g2g.yaml
A380_AI_Crew_GateToGate/src/a380_ai_crew/profiles/: default.yaml
A380_AI_Crew_GateToGate/src/a380_ai_crew/sim/: simconnect_backend.py  simlayer.py  wasim_backend.py
A380_AI_Crew_GateToGate/tools/: diag_runtime.py
